# murr-benchmark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run_bench.sh
.github/workflows/: ci.yml
benches/: benchutil.rs  flight_bench.rs  hashmap_bench.rs  hashmap_row_bench.rs  http_bench.rs  murr_embed.rs  murr_embed_bench.rs  murrdb_http.rs  pg_feast.rs  pg_feast_bench.rs  pg_featureblob.rs  redis_feast.rs  redis_feast_bench.rs  redis_featureblob.rs  redis_featureblob_bench.rs  rocksdb.rs  rocksdb_bench.rs  table_bench.rs
configs/: murr_embed.yaml  murr_http.yaml  pg_feast.yaml  pg_featureblob.yaml  redis_feast.yaml  redis_featureblob.yaml  rocksdb.yaml
python/: .gitignore  pyproject.toml
python/murr_bench/: backend.py  cli.py  config.py  runner.py  testdata.py
python/murr_bench/backends/: __init__.py  murr_http.py  postgres.py  redis.py  rocksdb.py
python/tests/: conftest.py  test_murr_http.py  test_postgres.py  test_redis.py  test_rocksdb.py
src/: backend.rs  bench.rs  config.rs  lib.rs  testdata.rs  testing.rs
src/backends/: mod.rs  murr_embed.rs  murr_http.rs  rocksdb.rs
src/backends/postgres/: feast.rs  featureblob.rs  mod.rs
src/backends/redis/: feast.rs  featureblob.rs  mod.rs
src/stats/: disk.rs  mem.rs  mod.rs  net.rs
