[package]
name = "murr-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmarks for murr - columnar in-memory cache for AI/ML inference workloads"
license = "Apache-2.0"
publish = false

[dependencies]
murr = { git = "https://github.com/murrdb/murr", features = ["testutil"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
rand = "0.10"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["redis"] }
reqwest = { version = "0.13", features = ["json"] }
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
arrow = { version = "58", default-features = true, features = ["ipc"] }
arrow-flight = "58"
axum = "0.8"
tonic = "0.14"
futures = "0.3"
serde_json = "1"
ahash = "0.8"
tempfile = "3"

[[bench]]
name = "hashmap_bench"
harness = false

[[bench]]
name = "hashmap_row_bench"
harness = false

[[bench]]
name = "table_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "flight_bench"
harness = false

[[bench]]
name = "redis_featureblob_bench"
harness = false

[[bench]]
name = "redis_feast_bench"
harness = false

[profile.bench]
debug = 1                   # line tables + symbols (good enough for perf)
lto = false                 # optional: makes disasm easier to read
codegen-units = 1           # optional: more stable codegen
panic = "abort"             # optional
force-frame-pointers = true

[profile.bench.build-override]
debug = true

[profile.bench.package."*"]
debug = true
