[package]
name = "murr-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmarks for murr - columnar in-memory cache for AI/ML inference workloads"
license = "Apache-2.0"
publish = false

[dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
rand = "0.10"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["redis"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow = { version = "58", default-features = true, features = ["ipc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "redis_featureblob_bench"
harness = false

[[bench]]
name = "redis_feast_bench"
harness = false

[profile.bench]
debug = 1                   # line tables + symbols (good enough for perf)
lto = false                 # optional: makes disasm easier to read
codegen-units = 1           # optional: more stable codegen
panic = "abort"             # optional
force-frame-pointers = true

[profile.bench.build-override]
debug = true

[profile.bench.package."*"]
debug = true
