[package]
name = "murr-benchmark"
version = "0.1.0"
edition = "2024"
description = "Benchmarks for murr - columnar in-memory cache for AI/ML inference workloads"
license = "Apache-2.0"
publish = false

[dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
rand = "0.10"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
testcontainers = "0.27"
murr = { git = "https://github.com/murrdb/murr", features = ["testutil"] }
reqwest = { version = "0.13", features = ["json"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow = { version = "58", default-features = true, features = ["ipc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
bollard = "0.20"
futures-util = "0.3"
libc = "0.2"

[[bench]]
name = "murrdb_http_bench"
harness = false

[[bench]]
name = "redis_featureblob_bench"
harness = false

[[bench]]
name = "redis_feast_bench"
harness = false

[[bench]]
name = "murr_embed_bench"
harness = false

[profile.bench]
debug = 1                   # line tables + symbols (good enough for perf)
lto = false                 # optional: makes disasm easier to read
codegen-units = 1           # optional: more stable codegen
panic = "abort"             # optional
force-frame-pointers = true

[profile.bench.build-override]
debug = true

[profile.bench.package."*"]
debug = true
